# henryk-analysis

./: .env.template  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
recordings/: 1 - generate stats.ipynb  2 - analyse stats.ipynb  batch.ipynb  henryk-stats.csv
references/: Audio Conversions.md  ChatGPT_Prompts.md  Example Classification.md  Git-Perma-Remove.md  Statystyki Nagrań Taty Dla Henryka.md  transcriptions_stats_analysis.md
resources/: dad_tale_mappings.json  fairy_tale_mappings.json  mother_family_mentions_sentiment_mappings.json  mother_mentions_sentiment_mappings.json  overall_mood_mappings.json  overall_sentiment_mappings.json  privacy_concern_type_mappings.json  prompt_recording_classification.md  recording_classification.md  template_transcription.docx  text_mappings.json  wordcloud_mappings.json
visits/: 1 - visits stats tables.ipynb  1 - visits stats.ipynb
whcli/: 011c0d5f-c141-4080-a649-7a1563d9c376.json  137939cb-353e-4af7-bea5-1d15545edbe6.json  1a9dbe63-8252-40f4-9c67-3ee5e87b7606.json  233684dc-842c-4d05-893f-44886cb11812.json  2a5a994d-7e1c-405d-84fb-5c282904e512.json  2bf8fbc0-91eb-4d7c-a9a1-ea78ce4244d5.json  347f219d-9584-4f7e-aaef-195ce3398164.json  34aa507f-474d-4da7-aa6c-78dde7662f9c.json  3522ea29-bba8-43f8-ad92-8beaa1a28968.json  3b149edf-6432-40e2-a2a4-221011744896.json  3fb6157f-12eb-4ae2-b01a-75fbeabbe6a1.json  406ee362-0f2a-48a9-a6a3-ec4e679d9178.json  41f9fcfd-d684-4d6e-b2a2-497dcbff3944.json  4e30ae66-a702-41fc-8c42-c1d591db523c.json  4eddb71e-32af-422c-a5e1-e9010ed15649.json  process-content.py  (+24 more)
(+54 files in other folders)
