[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "lib_henryk"
version = "0.3"
description="Henryk content creation and analysis"
authors = [
    {name = "Konrad Jelen <konrad.jelen@gmail.com>"},
]
license = {text = ""}

requires-python = ">=3.10"
dependencies = [
    'pydub',
    'pandas',
    'polars',
    'ffmpeg-binaries',
    'matplotlib',
    'scikit-learn',
    'numpy',
    'python-docx',
    'python-dotenv',
    'openai',
    'markdown-it-py',
    'mdit_plain',
    'json_repair',
    'names_generator',
    'wordcloud',
]

[tool.setuptools]
include-package-data = true # default value

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]
namespaces = true # default value is true

# EOF
